--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,11 @@
 !euler-lagrange.html
 !fischer-random.html
 !greyline.html
+!guitar.html
 !index.html
 !ito.html
 !julia.html
+!keyboard.html
 !reading-list.html
 !satellites.html
 !site-info.html
