--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,9 @@
 !demo.html
 !euler-lagrange.html
 !fischer-random.html
-!greyline.html
+!geometry.html
 !guitar.html
+!greyline.html
 !index.html
 !ito.html
 !julia.html
